# vssocks

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  README  Readme.md  Readme.zh_CN.md  cmake_install.cmake  sample.conf  vssocks.conf
doc/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  Makefile  buffer.cpp  buffer.h  client.cpp  client.h  cmake_install.cmake  conf.cpp  conf.h  config.h  crypto.cpp  crypto.h  peer.cpp  peer.h  proxy.cpp  proxy.h  server.cpp  server.h  socks.cpp  socks.h  socksv5.cpp  socksv5.h  thread.cpp  thread.h  user.cpp  user.h  utils.cpp  utils.h  vsscli  vsscli.cc  vsssrv  vsssrv.cc  xstring.cpp  xstring.h
