cmake_minimum_required(VERSION 2.6)
find_library(_SSL_ NAMES ssl)
if (DEFINED _SSL_)
  message(STATUS "Searching ssl - done")
else (DEFINED _SSL_)
  message(FATAL_ERROR "Searching ssl - not found")
endif (DEFINED _SSL_)
find_library(_CRYPTO_ NAMES crypto)
if (DEFINED _CRYPTO_)
  message(STATUS "Searching crypto - done")
else (DEFINED _CRYPTO_)
  message(FATAL_ERROR "Searching crypto - not found")
endif (DEFINED _CRYPTO_)
add_definitions("-Wall -g")
file(GLOB SRCCPP_LIST "*.cpp")
file(GLOB SRCC_LIST "*.c")
add_library(vssocks ${SRCCPP_LIST} ${SRCC_LIST})
file(GLOB HDR_LIST "*.h")
add_custom_target(hdrs DEPENDS ${HDR_LIST})
add_dependencies(vssocks hdrs)
add_executable(vsssrv vsssrv.cc)
add_executable(vsscli vsscli.cc)
target_link_libraries(vsssrv vssocks -lcrypto -lssl -pthread)
target_link_libraries(vsscli vssocks -lcrypto -lssl -pthread)
